test/resources/valid/ImportC.flo
string USERS_URL = '/users';
string UPDATE_USERS_URL = '/users/:uuid';