test/resources/invalid/parse/UrlsImport.flo
string POSTS_URL = '/posts';
string USERS_URL = '/users';